04-kubernetes-project/namespace.yaml
##Create Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-project
  labels:
    name: production
