04-kubernetes-project/backend-deployment.yaml
##Creating a backend Deployment for MySQL

  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: backend
    namespace: cloud-project
  spec:
    replicas: 2
    selector:
      matchLabels:
        app: backend
    template:
      metadata:
        labels:
          app: backend
      spec:
        containers:
        - name: backend
          image: kennethreitz/httpbin
          ports:
          - containerPort: 80
