04-kubernetes-project/backend-service.yaml

##Creating a Service to expose Backend Deployment

  apiVersion: v1
  kind: Service
  metadata:
    name: backend-service
    namespace: cloud-project
  spec:
    type: ClusterIP
    selector:
      app: backend
    ports:
      - protocol: TCP
        port: 80
        targetPort: 80
