04-kubernetes-project/sql-service.yaml

##Creating a Service to expose MySQL Deployment

  apiVersion: v1
  kind: Service
  metadata:
    name: mysql-service
    namespace: cloud-project
  spec:
    type: ClusterIP
    selector:
      app: mysql
    ports:
      - protocol: TCP
        port: 3306
        targetPort: 3306
